--- a/LabAccounting/Views/Journal/Index.cshtml
+++ b/LabAccounting/Views/Journal/Index.cshtml
@@ -63,3 +63,10 @@
         </div>
     </div>
 </div>
+
+<script>
+    var MetaDataUrl = "@Url.Action("MetaData", "Journal")";
+    var TemplatesUrl = "@Url.Action("GetTemplatesJson", "Journal")";
+    var SampleListUrl = "@Url.Action("GetSampleListJson", "Journal")";
+    var SampleSaveUrl = "@Url.Action("SaveSample", "Journal")";
+</script>
