--- a/LabAccounting/Content/mainpage.css
+++ b/LabAccounting/Content/mainpage.css
@@ -52,6 +52,10 @@ div.autocompletion {
     display: flex;
 }
 
+    .modal-sample-row:last-child {
+        border: none;
+    }
+
 .lds-ellipsis {
     display: inline-block;
     position: relative;
