--- a/LabAccounting/Views/Journal/Index.cshtml
+++ b/LabAccounting/Views/Journal/Index.cshtml
@@ -57,6 +57,7 @@
             <div class="modal-body" id="SampleAddBody">
             </div>
             <div class="modal-footer">
+                <span id="SampleAddWarning" class="alert alert-danger alert-popup hidden" role="alert"><b>Ошибка:</b> Заполнены не все поля</span>
                 <button type="button" id="SampleAddSave" class="btn btn-primary">Сохранить</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Отменить</button>
             </div>
