--- a/LabAccounting/Views/Journal/Index.cshtml
+++ b/LabAccounting/Views/Journal/Index.cshtml
@@ -66,8 +66,10 @@
 </div>
 
 <script>
+    var IndexUrl = "@Url.Content("~/Journal/Index")"
     var ModalAddUrl = "@Url.Action("ModalAdd", "Journal")";
     var TemplatesUrl = "@Url.Action("GetTemplatesJson", "Journal")";
     var SampleListUrl = "@Url.Action("GetSampleListJson", "Journal")";
     var SampleSaveUrl = "@Url.Action("SaveSample", "Journal")";
+    var SampleRemoveUrl = "@Url.Action("RemoveSample", "Journal")";
 </script>
