--- a/LabAccounting/Views/Shared/_Layout.cshtml
+++ b/LabAccounting/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.TitlePage</title>
+    <link rel="icon" type="image/x-icon" href="@Url.Content("~/Content/Images/favicon.ico")" />
     @Styles.Render("~/Content/css")
 
     @RenderSection("styles", required: false)
@@ -35,14 +36,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Home", "Index", "Journal", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Главная", "Index", "Journal", new { area = "" }, new { @class = "navbar-brand" })
             </div>
 
-            <div class="navbar-collapse collapse">
+            @*<div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Test", "Index", "Journal")</li>
                 </ul>
-            </div>
+            </div>*@
         </div>
     </div>
     <div class="container body-content">
